<resources>
    <string name="app_name">HairShmair</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="tools">Tools</string>
    <string name="line">Line</string>
    <string name="doted_line">Doted_line</string>
    <string name="palette">Palette</string>
    <string name="arrow">Arrow</string>
    <string name="brush_size">Brush_size</string>
    <string name="head">Head</string>
    <string name="men">Men</string>
    <string name="women">Women</string>


    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
</resources>