<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#d6d7d7"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="#d6d7d7"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/new_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/start_new"

                android:src="@drawable/new_pic" />

            <ImageButton
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/save"
                android:src="@drawable/save" />

            <ImageButton
                android:id="@+id/undo_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/save"
                android:src="@drawable/undo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#d6d7d7"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/head_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/head"
                    android:src="@drawable/heads" />

                <ImageButton
                    android:id="@+id/brush_size_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/brush_size"
                    android:src="@drawable/brush_size" />

                <ImageButton
                    android:id="@+id/palette_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/palette"
                    android:src="@drawable/palette" />

                <LinearLayout
                    android:id="@+id/current_color"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/black"
                    android:gravity="right"
                    android:orientation="horizontal">

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <com.example.HairSchema.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"
        android:layout_weight="1"
        android:background="@drawable/face" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#d6d7d7"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush" />

        <ImageButton
            android:id="@+id/line_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/line"
            android:src="@drawable/line" />

        <ImageButton
            android:id="@+id/doted_line_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/doted_line"
            android:src="@drawable/doted_line" />

        <ImageButton
            android:id="@+id/smoothLine_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/arrow"
            android:src="@drawable/smooth_line" />

        <ImageButton
            android:id="@+id/arrow_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/arrow"
            android:src="@drawable/arrow" />

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />

    </LinearLayout>


</LinearLayout>